<resources>
    <string name="app_name">AutoTitle</string>
    <string name="language_config_path">language_config.json</string>
    <string name="load_button_title">Select</string>
    <string name="record_button_title">Record</string>
    <string name="OK" translatable="false">OK</string>
    <string name="edit_caption">Captions</string>
    <string name="stickers_caption">Stickers</string>
    <string name="text_caption">Text</string>
    <string name="saved_caption">Video has been saved</string>
    <string name="error_while_saving">Error while saving video</string>
    <string name="percent_text" translatable="false">%1$s\%%</string>
    <string name="time_second_string" translatable="false">%1$s</string>
    <string name="yes_caption">Yes</string>
    <string name="no_caption">No</string>
    <string name="cancel_video_saving_question">Are you sure you want to cancel video saving?</string>
    <string name="exit_question">Are you sure to want to exit?</string>
    <string name="share_caption">Share</string>
    <string name="save_to_gallery_caption">Save</string>
    <string name="share_video_title">Share to…</string>
    <string name="saved_path_video">Saved video %1$s</string>
    <string name="video_saving_cancelled_caption">Video saving has been cancelled</string>
    <string name="some_error">Error</string>
    <string name="or_caption">OR</string>
    <string name="welcome_title">AutoTitle</string>
    <string name="need_load_title">Create new project</string>
    <string name="save_captions">Applying captions…</string>
    <string name="save_button_caption">Save</string>
    <string name="empty_overlay_recycler">Double tap to edit caption</string>
    <string name="motto" translatable="false">Video caption made easy</string>
    <string name="check_limit">Sorry, video can be up to 60 secs</string>
    <string name="guide_add_case">Click on button to add new caption at current time.</string>
    <string name="guide_recycler_item">Tap on list item to select as current. It will become highlighted.</string>
    <string name="guide_recycler_item_edit">Double tap on list item to edit text.</string>
    <string name="guide_doubletap">Double tap on caption item to edit text.</string>
    <string name="guide_resize">Use multitouch gestures for resizing and changing placement.</string>
    <string name="guide_save">Click here for save.</string>
    <string name="error_while_opening_file">Error while opening file</string>
    <string name="guide_recycler_delete">Swipe from right to left on item for delete.</string>
    <string name="error_no_internet">No captions was detected due service unavailable</string>
    <string name="error_no_captions">No captions was detected</string>
    <string name="error_no_caption_net_error">due remote service unavailable. Check your network connection.</string>
    <string name="empty_recycler_add_caption">Add caption</string>
    <string name="here_are_no_captions_you_can_add_it">Here are no captions.</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="snack_bar_item_deleted">Item deleted.</string>
    <string name="error_no_captions_no_audio">Source video doesn\'t have audio track.</string>
    <string name="language_selection_notselected">Tap to select</string>
    <string name="language_selection_title">Language</string>
    <string name="language_selection_search_nothing">Nothing</string>
    <string name="language_selection_please_select">Please choose the language</string>
    <string name="language_selection_start_video">Start</string>
    <string name="language_selection_switch_title">Auto-detect captions</string>
    <string name="preload_screen_title">Language</string>
    <string name="postvideo_screen_title"><![CDATA[Save & Share]]></string>
    <string name="main_screen_recent_title">Recent projects</string>
    <string name="main_screen_recent_projects_edit_title">Edit</string>
    <string name="result_screen_button_title_saved">Saved</string>
    <string name="confirm_cancellation_title">Confirm cancellation</string>
    <string name="cancel_caption">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="opensource_licenses_title">Open Source Licenses</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="email_app_notfound">Email application not found</string>
    <string name="terms_cond_title"><![CDATA[Terms &amp; Conditions]]></string>
    <string name="preferences_general_category">General</string>
    <string name="send_feedback_title">Send feedback</string>
    <string name="send_feedback_summary">Report technical issues or suggest new features</string>
    <string name="language_preference_title">Language</string>
    <string name="theme_preference_title">Theme</string>
    <string name="copy_video_source_preference_title">Copy video source</string>
    <string name="copy_video_source_preference_summary">Save a copy of the source video in the project folder</string>
    <string name="preferences_notifications_category">Notifications</string>
    <string name="saved_video_notification_title">Saved video</string>
    <string name="preferences_playback_category">Playback</string>
    <string name="preferences_about_category">About</string>
    <string name="seek_animation_title">Seek animation</string>
    <string name="seek_animation_summary">Smooth seeking/scrubbing playback animation</string>
    <string name="seek_frame_preview_title">Seek preview</string>
    <string name="seek_frame_preview_summary">Show preview frames while seeking/scrubbing</string>
    <string name="video_saved_title">Video has been saved</string>
    <string name="recycler_edit_title">Edit title</string>
    <string name="recycler_delete">Delete</string>
    <string name="edit_title_ok">OK</string>
    <string name="edit_title_cancel">Cancel</string>
    <string name="edit_title_project_name">Project name</string>
    <string name="delete_project_dialog_text">Delete project &lt;b>%1$s&lt;/b>?</string>
    <string name="processing_the_video">Video processing…</string>
    <string name="theme_title_system">System</string>
    <string name="theme_title_dark">Dark</string>
    <string name="theme_title_light">Light</string>
    <string name="settings_caption">Settings</string>
    <string name="permission_message_camera_alert">Application needs camera access to taking video.</string>
    <string name="permission_message_explained">Try to grant it in application settings.</string>
    <string name="permission_message_storage_alert">Application needs storage permission to loading and saving project files.</string>
    <string name="delete_title">Deleting</string>
    <string name="app_needs_permission">App needs permission</string>
    <string name="sound_off">Sound off</string>
    <string name="sound_on">Sound on</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="attention">Attention</string>
    <string name="return_to_video_edit_question">Are you sure to want to return to video editing?</string>
    <string name="return_to_home_screen_question">Are you sure to go to home screen?</string>
    <string name="select_color_title">Select color</string>
</resources>