<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preferences_general_category">
        <DropDownPreference
            app:key="app_theme"
            app:title="@string/theme_preference_title"
            app:entries="@array/themes"
            app:entryValues="@array/themes_code"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="copy_source_video"
            app:summary="@string/copy_video_source_preference_summary"
            app:title="@string/copy_video_source_preference_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_notifications_category">
        <SwitchPreferenceCompat
            app:key="show_notification_onsave"
            app:title="@string/saved_video_notification_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_playback_category">
        <SwitchPreferenceCompat
            app:key="smooth_seek_animation"
            app:summary="@string/seek_animation_summary"
            app:title="@string/seek_animation_title" />
        <SwitchPreferenceCompat
            android:enabled="false"
            android:defaultValue="false"
            app:key="preview_seek_animation"
            app:summary="@string/seek_frame_preview_summary"
            app:title="@string/seek_frame_preview_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_about_category">
        <Preference
            app:key="opensource_licenses"
            app:title="@string/opensource_licenses_title" />
        <Preference
            app:key="terms_conditions"
            app:title="@string/terms_cond_title" />
        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy_title" />
        <Preference
            app:key="feedback"
            app:summary="@string/send_feedback_summary"
            app:title="@string/send_feedback_title" />
    </PreferenceCategory>

    <Preference
        android:layout="@layout/about_app_preference_layout"
        app:key="about_app" />

</PreferenceScreen>